metrics on the full grasp inference

--- a/MLP-approach/infer_bce.ipynb
+++ b/MLP-approach/infer_bce.ipynb
@@ -143,10 +143,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "2a128561",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'test_single_point' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m point_idx \u001b[39m=\u001b[39m \u001b[39m10\u001b[39m\n\u001b[1;32m      2\u001b[0m single_point \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m \n\u001b[0;32m----> 3\u001b[0m preds, diff_n, single_point, single_point_gt, height \u001b[39m=\u001b[39m test_single_point(grasp, mask_n, device, features, model, args_infer, point_idx,heights, single_point\u001b[39m=\u001b[39msingle_point)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'test_single_point' is not defined"
+     ]
+    }
+   ],
    "source": [
     "point_idx = 10\n",
     "single_point = None \n",
