--- a/MLP-approach/infer_grasp_unet.ipynb
+++ b/MLP-approach/infer_grasp_unet.ipynb
@@ -308,7 +308,7 @@
       "  data_dict['points_grasp'] = torch.tensor(points_grasps)\n",
       "/home/cedric/ZeroShot-Grasping/MLP-approach/dataset_jacquard_samples.py:91: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  data_dict['raw'] = torch.tensor(gknet_labels)\n",
-      "/tmp/ipykernel_19930/3396165159.py:8: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_22402/3396165159.py:8: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  all_points = torch.tensor(data[\"points_grasp\"]//14)\n"
      ]
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "482f227a",
    "metadata": {},
    "outputs": [
@@ -361,69 +361,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> \u001b[0;32m/tmp/ipykernel_19930/1737264911.py\u001b[0m(41)\u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m     39 \u001b[0;31m    \u001b[0munet_preds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_unet_preds\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munet\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvalid_pts_pred\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mresized_mask\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     40 \u001b[0;31m    \u001b[0;32mimport\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m---> 41 \u001b[0;31m    \u001b[0mend_second_point\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mstart_second_point\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     42 \u001b[0;31m    \u001b[0mnum_grasps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalid_pts_pred\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     43 \u001b[0;31m    \u001b[0;31m#objs = 1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cedric/ZeroShot-Grasping/MLP-approach/dataset_jacquard_samples.py:86: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  data_dict['points_grasp'] = torch.tensor(points_grasps)\n",
+      "/home/cedric/ZeroShot-Grasping/MLP-approach/dataset_jacquard_samples.py:91: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  data_dict['raw'] = torch.tensor(gknet_labels)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> \u001b[0;32m/tmp/ipykernel_22402/1758956628.py\u001b[0m(43)\u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m     41 \u001b[0;31m    \u001b[0mitems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     42 \u001b[0;31m    \u001b[0;32mimport\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m---> 43 \u001b[0;31m    \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munet_preds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     44 \u001b[0;31m        \u001b[0mitem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0m\u001b[0;32m     45 \u001b[0;31m        \u001b[0mitem\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'origin_point'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalid_pts_pred\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0m\n",
-      "tensor([[[[ 4, 79],\n",
-      "          [ 4, 79],\n",
-      "          [ 3, 79],\n",
-      "          ...,\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79]]],\n",
-      "\n",
-      "\n",
-      "        [[[ 6, 79],\n",
-      "          [ 5, 79],\n",
-      "          [ 2, 79],\n",
-      "          ...,\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79]]],\n",
-      "\n",
-      "\n",
-      "        [[[ 8, 79],\n",
-      "          [ 2, 79],\n",
-      "          [ 1, 79],\n",
-      "          ...,\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79]]],\n",
-      "\n",
-      "\n",
-      "        ...,\n",
-      "\n",
-      "\n",
-      "        [[[79, 79],\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79],\n",
-      "          ...,\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79]]],\n",
-      "\n",
-      "\n",
-      "        [[[79, 79],\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79],\n",
-      "          ...,\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79]]],\n",
-      "\n",
-      "\n",
-      "        [[[79, 79],\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79],\n",
-      "          ...,\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79],\n",
-      "          [ 1, 79]]]], device='cuda:0')\n",
-      "torch.Size([50, 1, 80, 2])\n"
+      "torch.Size([50, 1])\n"
      ]
     }
    ],
@@ -466,8 +429,20 @@
     "    \n",
     "    #get second point information using the unet inference \n",
     "    start_second_point = time.time()\n",
-    "    unet_preds = get_unet_preds(unet,valid_pts_pred,resized_mask)\n",
-    "    import pdb; pdb.set_trace()\n",
+    "    unet_preds, conf_vals = get_unet_preds(unet,valid_pts_pred,resized_mask)\n",
+    "    #need to add it to items array here \n",
+    "    items = []\n",
+    "    #import pdb; pdb.set_trace()\n",
+    "    for i in range(len(unet_preds)):\n",
+    "        item = {}\n",
+    "        item['origin_point'] = valid_pts_pred[i]\n",
+    "        item['preds'] = preds\n",
+    "        item['single_point'] = valid_pts_pred[i]\n",
+    "        item['pred_point'] = unet_preds[i]\n",
+    "        item['conf'] = conf_vals[i]\n",
+    "        items.append(item)\n",
+    "        #items.append([valid_pts_pred[i],unet_preds[i]])\n",
+    "    \n",
     "    end_second_point = time.time() - start_second_point\n",
     "    num_grasps = valid_pts_pred.shape[0]\n",
     "    #objs = 1\n",
@@ -486,10 +461,6 @@
     "    #data['model_single'] = model_single\n",
     "\n",
     "    ##currently only support constraint mode == false\n",
-    "    \n",
-    "    start_pred = time.time()\n",
-    "    items = get_predictions(num_grasps,data,constrain_mode=constrain_mode)\n",
-    "    end_pred = time.time() - start_pred\n",
     "\n",
     "        \n",
     "    try :\n",
@@ -532,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "befcc3b4",
    "metadata": {},
    "outputs": [
@@ -550,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1c78f1dc",
    "metadata": {},
    "outputs": [
@@ -569,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "f2a3f5df",
    "metadata": {},
    "outputs": [
