--- a/MLP-approach/infer_grasp_unet.ipynb
+++ b/MLP-approach/infer_grasp_unet.ipynb
@@ -308,7 +308,7 @@
       "  data_dict['points_grasp'] = torch.tensor(points_grasps)\n",
       "/home/cedric/ZeroShot-Grasping/MLP-approach/dataset_jacquard_samples.py:91: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  data_dict['raw'] = torch.tensor(gknet_labels)\n",
-      "/tmp/ipykernel_22402/3396165159.py:8: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_22686/3396165159.py:8: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  all_points = torch.tensor(data[\"points_grasp\"]//14)\n"
      ]
     }
@@ -353,41 +353,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "482f227a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+     "ename": "RuntimeError",
+     "evalue": "1D tensors expected, but got 2D and 1D tensors",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 75\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[39m#data['model_single'] = model_single\u001b[39;00m\n\u001b[1;32m     69\u001b[0m \n\u001b[1;32m     70\u001b[0m \u001b[39m##currently only support constraint mode == false\u001b[39;00m\n\u001b[1;32m     74\u001b[0m start_vis \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[0;32m---> 75\u001b[0m cur_accuracy \u001b[39m=\u001b[39m vis_preds_with_metrics(num_grasps, items, org_image, grasp,datas[\u001b[39m'\u001b[39;49m\u001b[39mheights\u001b[39;49m\u001b[39m'\u001b[39;49m], args_infer,preds_cp,topks\u001b[39m=\u001b[39;49mtopk_grasps)\n\u001b[1;32m     76\u001b[0m end_vis \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime() \u001b[39m-\u001b[39m start_vis\n\u001b[1;32m     78\u001b[0m accuracies\u001b[39m.\u001b[39mappend(cur_accuracy) \n",
+      "File \u001b[0;32m~/ZeroShot-Grasping/MLP-approach/infer_utils.py:438\u001b[0m, in \u001b[0;36mvis_preds_with_metrics\u001b[0;34m(num_grasps, items, org_image, grasp, heights, args_infer, preds_cp, topks)\u001b[0m\n\u001b[1;32m    436\u001b[0m grasp_cur \u001b[39m=\u001b[39m grasp[gt_idx] \u001b[39m*\u001b[39m \u001b[39m14\u001b[39m \u001b[39m+\u001b[39m \u001b[39m7\u001b[39m\n\u001b[1;32m    437\u001b[0m height \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m(heights)\u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(heights)\n\u001b[0;32m--> 438\u001b[0m corner_points, corner_points_pred, correct, iou, angle_diff \u001b[39m=\u001b[39m grasp_correct_full(single_point, pred_point, \n\u001b[1;32m    439\u001b[0m                                                 grasp_cur,height \u001b[39m/\u001b[39;49m\u001b[39m2.\u001b[39;49m \u001b[39m*\u001b[39;49m args_infer[\u001b[39m\"\u001b[39;49m\u001b[39mimg_size\u001b[39;49m\u001b[39m\"\u001b[39;49m] )\n\u001b[1;32m    441\u001b[0m \u001b[39mfor\u001b[39;00m pt \u001b[39min\u001b[39;00m grasp_cur : \n\u001b[1;32m    442\u001b[0m     new_x \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(pt[\u001b[39m0\u001b[39m]) \n",
+      "File \u001b[0;32m~/ZeroShot-Grasping/MLP-approach/metrics_utils.py:67\u001b[0m, in \u001b[0;36mgrasp_correct_full\u001b[0;34m(pred_point, single_point, gt_grasp, heights, thresh_angle, thresh_iou)\u001b[0m\n\u001b[1;32m     62\u001b[0m vec_single_to_gt \u001b[39m=\u001b[39m vec_single_to_gt \u001b[39m/\u001b[39m torch\u001b[39m.\u001b[39mnorm(vec_single_to_gt)\n\u001b[1;32m     63\u001b[0m vec_single_to_gt_rev \u001b[39m=\u001b[39m vec_single_to_gt_rev \u001b[39m/\u001b[39m torch\u001b[39m.\u001b[39mnorm(vec_single_to_gt_rev)\n\u001b[0;32m---> 67\u001b[0m dot_product \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mdot(vec_pred_to_single, vec_single_to_gt)\n\u001b[1;32m     68\u001b[0m dot_product_rev \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mdot(vec_pred_to_single, vec_single_to_gt_rev)\n\u001b[1;32m     69\u001b[0m \u001b[39m# Calculate the magnitudes of the vectors\u001b[39;00m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: 1D tensors expected, but got 2D and 1D tensors"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cedric/ZeroShot-Grasping/MLP-approach/dataset_jacquard_samples.py:86: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  data_dict['points_grasp'] = torch.tensor(points_grasps)\n",
-      "/home/cedric/ZeroShot-Grasping/MLP-approach/dataset_jacquard_samples.py:91: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  data_dict['raw'] = torch.tensor(gknet_labels)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> \u001b[0;32m/tmp/ipykernel_22402/1758956628.py\u001b[0m(43)\u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m     41 \u001b[0;31m    \u001b[0mitems\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     42 \u001b[0;31m    \u001b[0;32mimport\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mpdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m---> 43 \u001b[0;31m    \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0munet_preds\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     44 \u001b[0;31m        \u001b[0mitem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     45 \u001b[0;31m        \u001b[0mitem\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'origin_point'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalid_pts_pred\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "torch.Size([50, 1])\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -463,15 +453,13 @@
     "    ##currently only support constraint mode == false\n",
     "\n",
     "        \n",
-    "    try :\n",
-    "        start_vis = time.time()\n",
-    "        cur_accuracy = vis_preds_with_metrics(num_grasps, items, org_image, grasp,datas['height'], args_infer,preds_cp,topks=topk_grasps)\n",
-    "        end_vis = time.time() - start_vis\n",
+    "\n",
+    "    start_vis = time.time()\n",
+    "    cur_accuracy = vis_preds_with_metrics(num_grasps, items, org_image, grasp,datas['heights'], args_infer,preds_cp,topks=topk_grasps)\n",
+    "    end_vis = time.time() - start_vis\n",
     "        \n",
-    "        accuracies.append(cur_accuracy) \n",
-    "    except : \n",
-    "            print('issue with eval')\n",
-    "            pass\n",
+    "    accuracies.append(cur_accuracy) \n",
+    "    #except : \n",
     "    \n",
     "    '''\n",
     "    all_runtime = float(end + end_valid_pts + end_topk + end_second_point + end_pred + end_vis) \n",
@@ -498,7 +486,7 @@
     "        print('Total accuracy is', sum(accuracies)/len(accuracies))\n",
     "\n",
     "\n",
-    "print('Total accuracy is', sum(accuracies)/len(accuracies))"
+    "#print('Total accuracy is', sum(accuracies)/len(accuracies))"
    ]
   },
   {
