infer grasp almost running

--- a/MLP-approach/infer_grasp.ipynb
+++ b/MLP-approach/infer_grasp.ipynb
@@ -130,7 +130,7 @@
    "outputs": [],
    "source": [
     "args_infer_single = {\n",
-    "    \"model_path\" : \"runs/bottle_1_double_sampling.ckpt\",\n",
+    "    \"model_path\" : \"runs/bottle_2_double.ckpt\",\n",
     "    \"device\" : \"cuda\",\n",
     "    \"img_size\" : 1120\n",
     "}\n"
@@ -146,7 +146,7 @@
     "device = torch.device(args_infer[\"device\"])\n",
     "image_transform = get_transform()\n",
     "inv_transform = get_inv_transform()\n",
-    "model_single = BCEGraspTransformer(img_size=args_infer_single[\"img_size\"],int_dim=256,output_dim=32,input_cls=3)\n",
+    "model_single = BCEGraspTransformer(img_size=args_infer_single[\"img_size\"],int_dim=256,output_dim=32,input_cls=1)\n",
     "model_single.load_state_dict(torch.load(args_infer_single[\"model_path\"]))\n",
     "model_single = model_single.to(device)"
    ]
@@ -174,11 +174,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/cedric/ZeroShot-Grasping/MLP-approach/dataset_jacquard_samples.py:82: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
-      "  data_dict['points_grasp'] = torch.tensor(points_grasps)\n",
       "/home/cedric/ZeroShot-Grasping/MLP-approach/dataset_jacquard_samples.py:86: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  data_dict['points_grasp'] = torch.tensor(points_grasps)\n",
+      "/home/cedric/ZeroShot-Grasping/MLP-approach/dataset_jacquard_samples.py:91: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  data_dict['raw'] = torch.tensor(gknet_labels)\n",
-      "/tmp/ipykernel_25101/3396165159.py:8: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_7459/3396165159.py:8: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  all_points = torch.tensor(data[\"points_grasp\"]//14)\n"
      ]
     }
@@ -203,42 +203,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "fb15711e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.01\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(min_dist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "e5fa8b07",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7968\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(dataset))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "197bf229",
    "metadata": {},
@@ -248,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "77e3a6ed",
    "metadata": {},
    "outputs": [],
@@ -259,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "482f227a",
    "metadata": {},
    "outputs": [
@@ -267,134 +231,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "num_grasps 50\n",
-      "Iteration 0\n",
-      "Total accuracy is 0.0\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cedric/anaconda3/envs/4D-humans/lib/python3.10/site-packages/shapely/set_operations.py:133: RuntimeWarning: invalid value encountered in intersection\n",
-      "  return lib.intersection(a, b, **kwargs)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/cedric/ZeroShot-Grasping/MLP-approach/infer_utils.py:412: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
-      "  plt.figure(figsize=(16,16))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
       "issue with eval\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n",
-      "num_grasps 50\n"
+      "Iteration 0\n"
      ]
+    },
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 94\u001b[0m\n\u001b[1;32m     92\u001b[0m     \u001b[39mif\u001b[39;00m test_idx \u001b[39m%\u001b[39m print_every \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m: \n\u001b[1;32m     93\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mIteration\u001b[39m\u001b[39m\"\u001b[39m, test_idx)\n\u001b[0;32m---> 94\u001b[0m         \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mTotal accuracy is\u001b[39m\u001b[39m'\u001b[39m, \u001b[39msum\u001b[39;49m(accuracies)\u001b[39m/\u001b[39;49m\u001b[39mlen\u001b[39;49m(accuracies))\n\u001b[1;32m     97\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mTotal accuracy is\u001b[39m\u001b[39m'\u001b[39m, \u001b[39msum\u001b[39m(accuracies)\u001b[39m/\u001b[39m\u001b[39mlen\u001b[39m(accuracies))\n",
+      "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -499,7 +358,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "3ccc24eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key origin_point\n",
+      "torch.Size([3, 1120, 1120])\n",
+      "key preds\n",
+      "torch.Size([1120, 1120, 3])\n",
+      "key single_point\n",
+      "torch.Size([2])\n",
+      "tensor([553., 539.])\n",
+      "key pred_point\n",
+      "torch.Size([2])\n",
+      "tensor([735, 525])\n",
+      "key conf\n",
+      "0.9449571967124939\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in items[0].keys(): \n",
+    "        print(\"key\",key)\n",
+    "        try : \n",
+    "                print(items[0][key].shape)\n",
+    "                if items[0][key].shape[0] != 3 and items[0][key].shape[0] < 1120: \n",
+    "                        print(items[0][key])\n",
+    "        except : \n",
+    "                print(items[0][key])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "befcc3b4",
    "metadata": {},
    "outputs": [
