--- a/MLP-approach/infer_grasp_unet.ipynb
+++ b/MLP-approach/infer_grasp_unet.ipynb
@@ -129,7 +129,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from unet import UNet"
+    "from unet import UNet\n",
+    "\n",
+    "#unet_path = 'runs/bottle_1_unet.pt'"
    ]
   },
   {
@@ -277,6 +279,7 @@
    ],
    "source": [
     "unet = UNet(n_channels=2,n_classes=1)\n",
+    "#unet.load_state_dict(torch.load(unet_path))\n",
     "unet = unet.cuda()\n",
     "unet.eval()"
    ]
@@ -308,7 +311,7 @@
       "  data_dict['points_grasp'] = torch.tensor(points_grasps)\n",
       "/home/cedric/ZeroShot-Grasping/MLP-approach/dataset_jacquard_samples.py:91: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  data_dict['raw'] = torch.tensor(gknet_labels)\n",
-      "/tmp/ipykernel_22686/3396165159.py:8: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/tmp/ipykernel_7929/3396165159.py:8: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  all_points = torch.tensor(data[\"points_grasp\"]//14)\n"
      ]
     }
@@ -353,22 +356,299 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "482f227a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "1D tensors expected, but got 2D and 1D tensors",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cedric/ZeroShot-Grasping/MLP-approach/dataset_jacquard_samples.py:86: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  data_dict['points_grasp'] = torch.tensor(points_grasps)\n",
+      "/home/cedric/ZeroShot-Grasping/MLP-approach/dataset_jacquard_samples.py:91: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  data_dict['raw'] = torch.tensor(gknet_labels)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0\n",
+      "Total accuracy is 0.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cedric/anaconda3/envs/4D-humans/lib/python3.10/site-packages/shapely/set_operations.py:133: RuntimeWarning: invalid value encountered in intersection\n",
+      "  return lib.intersection(a, b, **kwargs)\n",
+      "/home/cedric/ZeroShot-Grasping/MLP-approach/infer_utils.py:430: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`). Consider using `matplotlib.pyplot.close()`.\n",
+      "  plt.figure(figsize=(16,16))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 100\n",
+      "Total accuracy is 24.752475247524753\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 75\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[39m#data['model_single'] = model_single\u001b[39;00m\n\u001b[1;32m     69\u001b[0m \n\u001b[1;32m     70\u001b[0m \u001b[39m##currently only support constraint mode == false\u001b[39;00m\n\u001b[1;32m     74\u001b[0m start_vis \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime()\n\u001b[0;32m---> 75\u001b[0m cur_accuracy \u001b[39m=\u001b[39m vis_preds_with_metrics(num_grasps, items, org_image, grasp,datas[\u001b[39m'\u001b[39;49m\u001b[39mheights\u001b[39;49m\u001b[39m'\u001b[39;49m], args_infer,preds_cp,topks\u001b[39m=\u001b[39;49mtopk_grasps)\n\u001b[1;32m     76\u001b[0m end_vis \u001b[39m=\u001b[39m time\u001b[39m.\u001b[39mtime() \u001b[39m-\u001b[39m start_vis\n\u001b[1;32m     78\u001b[0m accuracies\u001b[39m.\u001b[39mappend(cur_accuracy) \n",
-      "File \u001b[0;32m~/ZeroShot-Grasping/MLP-approach/infer_utils.py:438\u001b[0m, in \u001b[0;36mvis_preds_with_metrics\u001b[0;34m(num_grasps, items, org_image, grasp, heights, args_infer, preds_cp, topks)\u001b[0m\n\u001b[1;32m    436\u001b[0m grasp_cur \u001b[39m=\u001b[39m grasp[gt_idx] \u001b[39m*\u001b[39m \u001b[39m14\u001b[39m \u001b[39m+\u001b[39m \u001b[39m7\u001b[39m\n\u001b[1;32m    437\u001b[0m height \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m(heights)\u001b[39m/\u001b[39m \u001b[39mlen\u001b[39m(heights)\n\u001b[0;32m--> 438\u001b[0m corner_points, corner_points_pred, correct, iou, angle_diff \u001b[39m=\u001b[39m grasp_correct_full(single_point, pred_point, \n\u001b[1;32m    439\u001b[0m                                                 grasp_cur,height \u001b[39m/\u001b[39;49m\u001b[39m2.\u001b[39;49m \u001b[39m*\u001b[39;49m args_infer[\u001b[39m\"\u001b[39;49m\u001b[39mimg_size\u001b[39;49m\u001b[39m\"\u001b[39;49m] )\n\u001b[1;32m    441\u001b[0m \u001b[39mfor\u001b[39;00m pt \u001b[39min\u001b[39;00m grasp_cur : \n\u001b[1;32m    442\u001b[0m     new_x \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(pt[\u001b[39m0\u001b[39m]) \n",
-      "File \u001b[0;32m~/ZeroShot-Grasping/MLP-approach/metrics_utils.py:67\u001b[0m, in \u001b[0;36mgrasp_correct_full\u001b[0;34m(pred_point, single_point, gt_grasp, heights, thresh_angle, thresh_iou)\u001b[0m\n\u001b[1;32m     62\u001b[0m vec_single_to_gt \u001b[39m=\u001b[39m vec_single_to_gt \u001b[39m/\u001b[39m torch\u001b[39m.\u001b[39mnorm(vec_single_to_gt)\n\u001b[1;32m     63\u001b[0m vec_single_to_gt_rev \u001b[39m=\u001b[39m vec_single_to_gt_rev \u001b[39m/\u001b[39m torch\u001b[39m.\u001b[39mnorm(vec_single_to_gt_rev)\n\u001b[0;32m---> 67\u001b[0m dot_product \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mdot(vec_pred_to_single, vec_single_to_gt)\n\u001b[1;32m     68\u001b[0m dot_product_rev \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mdot(vec_pred_to_single, vec_single_to_gt_rev)\n\u001b[1;32m     69\u001b[0m \u001b[39m# Calculate the magnitudes of the vectors\u001b[39;00m\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: 1D tensors expected, but got 2D and 1D tensors"
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 55\u001b[0m\n\u001b[1;32m     53\u001b[0m \u001b[39mif\u001b[39;00m constrain_mode \u001b[39m==\u001b[39m \u001b[39mTrue\u001b[39;00m : \n\u001b[1;32m     54\u001b[0m     origin_point[:, top_y, top_x] \u001b[39m=\u001b[39m [\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m]\n\u001b[0;32m---> 55\u001b[0m origin_point \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mnn\u001b[39m.\u001b[39;49mfunctional\u001b[39m.\u001b[39;49minterpolate(torch\u001b[39m.\u001b[39;49mtensor(origin_point)\u001b[39m.\u001b[39;49munsqueeze(\u001b[39m0\u001b[39;49m), (args_infer[\u001b[39m\"\u001b[39;49m\u001b[39mimg_size\u001b[39;49m\u001b[39m\"\u001b[39;49m], args_infer[\u001b[39m\"\u001b[39;49m\u001b[39mimg_size\u001b[39;49m\u001b[39m\"\u001b[39;49m]), mode\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mnearest\u001b[39;49m\u001b[39m\"\u001b[39;49m)\u001b[39m.\u001b[39msqueeze()\n\u001b[1;32m     58\u001b[0m item[\u001b[39m'\u001b[39m\u001b[39morigin_point\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m origin_point\n\u001b[1;32m     59\u001b[0m item[\u001b[39m'\u001b[39m\u001b[39mpreds\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m preds\n",
+      "File \u001b[0;32m~/anaconda3/envs/4D-humans/lib/python3.10/site-packages/torch/nn/functional.py:3931\u001b[0m, in \u001b[0;36minterpolate\u001b[0;34m(input, size, scale_factor, mode, align_corners, recompute_scale_factor, antialias)\u001b[0m\n\u001b[1;32m   3929\u001b[0m     \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39m_C\u001b[39m.\u001b[39m_nn\u001b[39m.\u001b[39mupsample_nearest1d(\u001b[39minput\u001b[39m, output_size, scale_factors)\n\u001b[1;32m   3930\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39minput\u001b[39m\u001b[39m.\u001b[39mdim() \u001b[39m==\u001b[39m \u001b[39m4\u001b[39m \u001b[39mand\u001b[39;00m mode \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mnearest\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[0;32m-> 3931\u001b[0m     \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39;49m_C\u001b[39m.\u001b[39;49m_nn\u001b[39m.\u001b[39;49mupsample_nearest2d(\u001b[39minput\u001b[39;49m, output_size, scale_factors)\n\u001b[1;32m   3932\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39minput\u001b[39m\u001b[39m.\u001b[39mdim() \u001b[39m==\u001b[39m \u001b[39m5\u001b[39m \u001b[39mand\u001b[39;00m mode \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mnearest\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m   3933\u001b[0m     \u001b[39mreturn\u001b[39;00m torch\u001b[39m.\u001b[39m_C\u001b[39m.\u001b[39m_nn\u001b[39m.\u001b[39mupsample_nearest3d(\u001b[39minput\u001b[39m, output_size, scale_factors)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1600x1600 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
      "data": {
@@ -425,11 +705,24 @@
     "    #import pdb; pdb.set_trace()\n",
     "    for i in range(len(unet_preds)):\n",
     "        item = {}\n",
-    "        item['origin_point'] = valid_pts_pred[i]\n",
+    "        origin_point = np.zeros((3, args_infer[\"img_size\"]//14, args_infer[\"img_size\"]//14))\n",
+    "        try : \n",
+    "            origin_point[:, valid_pts_pred[i][0][0], valid_pts_pred[i][0][1]] = [0, 1, 0]\n",
+    "        except : \n",
+    "            origin_point[:, int(valid_pts_pred[i][0][0].item()), int(valid_pts_pred[i][0][1].item())] = [0, 1, 0]\n",
+    "        \n",
+    "        top_x = int(unet_preds[i][0].item()) \n",
+    "        top_y = int(unet_preds[i][1].item()) \n",
+    "        if constrain_mode == True : \n",
+    "            origin_point[:, top_y, top_x] = [0, 1, 1]\n",
+    "        origin_point = torch.nn.functional.interpolate(torch.tensor(origin_point).unsqueeze(0), (args_infer[\"img_size\"], args_infer[\"img_size\"]), mode=\"nearest\").squeeze()\n",
+    "        \n",
+    "    \n",
+    "        item['origin_point'] = origin_point\n",
     "        item['preds'] = preds\n",
-    "        item['single_point'] = valid_pts_pred[i]\n",
-    "        item['pred_point'] = unet_preds[i]\n",
-    "        item['conf'] = conf_vals[i]\n",
+    "        item['single_point'] = valid_pts_pred[i][0] * 14 + 7\n",
+    "        item['pred_point'] = unet_preds[i] * 14 + 7\n",
+    "        item['conf'] = conf_vals[i].item()\n",
     "        items.append(item)\n",
     "        #items.append([valid_pts_pred[i],unet_preds[i]])\n",
     "    \n",
@@ -487,6 +780,43 @@
     "\n",
     "\n",
     "#print('Total accuracy is', sum(accuracies)/len(accuracies))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2d47befc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key origin_point\n",
+      "torch.Size([1, 2])\n",
+      "tensor([[1., 4.]], device='cuda:0')\n",
+      "key preds\n",
+      "torch.Size([1120, 1120, 3])\n",
+      "key single_point\n",
+      "torch.Size([2])\n",
+      "tensor([1., 4.], device='cuda:0')\n",
+      "key pred_point\n",
+      "torch.Size([2])\n",
+      "tensor([46, 32], device='cuda:0')\n",
+      "key conf\n",
+      "0.09957639873027802\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in items[0].keys(): \n",
+    "        print(\"key\",key)\n",
+    "        try : \n",
+    "                print(items[0][key].shape)\n",
+    "                if items[0][key].shape[0] < 1120 : \n",
+    "                        print(items[0][key])\n",
+    "        except : \n",
+    "                print(items[0][key])"
    ]
   },
   {
